--- a/css/styles.css
+++ b/css/styles.css
@@ -406,9 +406,15 @@ a {
   text-transform: uppercase;
   border-radius: 5px;
 }
+.btn:hover {
+  background: #dddddd;
+}
 @media (min-width: 768px) {
   .btn {
     padding: 10px 30px;
+  }
+  .btn + .btn {
+    margin-left: 10px;
   }
 }
 
@@ -466,7 +472,13 @@ a {
   display: flex;
   flex-direction: column;
 }
-
+@media (min-width: 768px) {
+  .nav {
+    flex-direction: row;
+    justify-content: flex-end;
+    align-items: center;
+  }
+}
 .nav-link {
   text-align: center;
   border-radius: 5px;
@@ -474,6 +486,11 @@ a {
   display: block;
   width: 100%;
   transition: background-color 0.2s ease-in-out, color 0.2s ease-in-out;
+}
+@media (min-width: 768px) {
+  .nav-link {
+    flex-basis: 100px;
+  }
 }
 
 .nav-link:hover {
@@ -657,20 +674,6 @@ a {
 
   .col-12 {
     flex-basis: 100%;
-  }
-
-  .nav {
-    flex-direction: row;
-    justify-content: flex-end;
-    align-items: center;
-  }
-
-  .nav-link {
-    flex-basis: 100px;
-  }
-
-  .btn + .btn {
-    margin-left: 10px;
   }
 
   .logo {
