--- a/scss/components/_images.scss
+++ b/scss/components/_images.scss
@@ -3,26 +3,18 @@
 /* ============================================= */
 
 .img-avatar {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
-    max-width: 100%; 
-    max-height: 100%;
-  }
-  
-  .img-frame {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-    margin-top: 10px;
-    max-width: 100%;
-    padding: 13px;
-    border: 1px solid #ccc;
-  }
-  
-  .img-logo {
-    display: block;
-    margin-left: auto;
-    margin-right: auto;
-  }
+  @include img-layout;
+  max-height: 100%;
+}
+
+.img-frame {
+  @include img-layout;
+  padding: 13px;
+  border: 1px solid #ccc;
+}
+
+.img-logo {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+}
