--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -12,7 +12,8 @@
   border-radius: 5px;
 
   &:hover {
-    background: lighten($color: $primary, $amount: 40%);
+    background: lighten($color: $primary, $amount: 15%);
+    @include transition;
   }
 
   @media #{$brk-tablet} {
