--- a/scss/components/_navigation.scss
+++ b/scss/components/_navigation.scss
@@ -20,9 +20,7 @@
     padding: 10px 0;
     display: block;
     width: 100%;
-    transition:
-      background-color .2s ease-in-out,
-      color .2s ease-in-out;
+    @include transition;
 
     @media #{$brk-tablet} {
       flex-basis: 100px;
