--- a/css/styles.css
+++ b/css/styles.css
@@ -668,51 +668,51 @@ a {
   }
 
   .col-1 {
-    flex-basis: 8.33%;
+    flex-basis: calc(8.333333% * 1);
   }
 
   .col-2 {
-    flex-basis: 16.67%;
+    flex-basis: calc(8.333333% * 2);
   }
 
   .col-3 {
-    flex-basis: 25%;
+    flex-basis: calc(8.333333% * 3);
   }
 
   .col-4 {
-    flex-basis: 33.33%;
+    flex-basis: calc(8.333333% * 4);
   }
 
   .col-5 {
-    flex-basis: 41.67%;
+    flex-basis: calc(8.333333% * 5);
   }
 
   .col-6 {
-    flex-basis: 50%;
+    flex-basis: calc(8.333333% * 6);
   }
 
   .col-7 {
-    flex-basis: 58.33%;
+    flex-basis: calc(8.333333% * 7);
   }
 
   .col-8 {
-    flex-basis: 66.67%;
+    flex-basis: calc(8.333333% * 8);
   }
 
   .col-9 {
-    flex-basis: 75%;
+    flex-basis: calc(8.333333% * 9);
   }
 
   .col-10 {
-    flex-basis: 83.33%;
+    flex-basis: calc(8.333333% * 10);
   }
 
   .col-11 {
-    flex-basis: 91.67%;
+    flex-basis: calc(8.333333% * 11);
   }
 
   .col-12 {
-    flex-basis: 100%;
+    flex-basis: calc(8.333333% * 12);
   }
 
   .logo {
